added a simple frontend to monitor the jobs

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,24 @@
-Welcome to CI-STEP
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CI-STEP</title>
+    <link rel="stylesheet" href="styles/index.css" />
+  </head>
+  <body>
+    <div class="header">CI-STEP</div>
+    <div id="root">
+      <div class="result table-head">
+        <div>Job Id</div>
+        <div class="repoName">Repository</div>
+        <div class="status">Linting Status</div>
+        <div class="status">Testing Status</div>
+        <div>Waiting Time</div>
+        <div>Execution Time</div>
+      </div>
+      <div id="results"></div>
+    </div>
+  </body>
+  <script src="./js/index.js"></script>
+</html>
