--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,7 @@
   </head>
   <body>
     <div class="header">CI-STEP</div>
-    <div id="root">
-      <div class="result table-head">
-        <div>Job Id</div>
-        <div class="repoName">Repository</div>
-        <div class="status">Linting Status</div>
-        <div class="status">Testing Status</div>
-      </div>
-      <div id="results"></div>
-    </div>
+    <div id="root"></div>
   </body>
   <script src="./js/index.js"></script>
 </html>
